--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.4",
-    "tailwindcss": "^3.1.8"
+    "@opengraphplus/tailwind": "^0.1.0",
+    "@tailwindcss/cli": "^4.2.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "tailwindcss": "^4.2.0"
   }
 }
